--- a/views/ref/portal/inicio.twig
+++ b/views/ref/portal/inicio.twig
@@ -15,6 +15,7 @@
 				<p>Todas las voces y todas las miradas serán escuchadas en este proceso -inédito en la provincia y en el país-, de modo
 					que la futura convención reformadora tenga la mayor legitimidad social posible.</p>
 				<p>Te invitamos a dejar tus opiniones en los 8 ejes principales a contemplarse en el proceso de reforma:</p>
+        <a href="{{urlFor('shwLogin')}}" class="btn btn-default btn-lg btn-block"><i class="fa fa-sign-in fa-fw"></i>Iniciar Sesión</a>
 			</div>
 			<div class="col-xs-12 col-sm-5"></div>
 		</div>
@@ -27,14 +28,14 @@
 			<div class="row">
         <div class="parent">
 
-				<div class="col-xs-12 col-sm-5 child">
+				<div class="col-xs-12 col-md-5 child">
 					<h1 class="grande black blanco" style="margin:0;"><span style="color:#c40202">0{{i}}</span><br>Democracia y participación</h1>
 				</div>
-				<div class="col-xs-12 col-sm-5 child">
+				<div class="col-xs-12 col-md-5 child">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo quas autem cumque, quasi reiciendis veniam ut tenetur
 						doloribus. Quis unde commodi nulla molestiae tenetur, quia deleniti fugiat non cupiditate ullam.</p>
 				</div>
-				<div class="col-xs-12 col-sm-2 child"><a href="#" class="btn btn-large btn-participar">PARTICIPAR</a></div>
+				<div class="col-xs-12 col-md-2 child"><a href="#" class="btn btn-large btn-participar">PARTICIPAR</a></div>
         </div>
 			</div>
 		</div>
