--- a/views/ref/registro/login-static.twig
+++ b/views/ref/registro/login-static.twig
@@ -1,14 +1,12 @@
-{% extends "lpe/master.twig" %} 
-{# ----------------------------------------------------------- #} 
-{% block titulo %}Login{% endblock %} 
-{% block body %}
-
-<div class="container">
-	<div class="row">
-		<div class="panel-inicio col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 ">
-			<h2><strong>INICIAR SESION</strong></h2>
-			<p>Inicie sesion para poder participar</p>
-			<div class="well well-lg">
+{% set body_style = 'background-color: #ddf3ff;' %} {% extends "ref/master2.twig" %} {# -----------------------------------------------------------
+#} {% block titulo %}Login{% endblock %} {% block body %}
+<div class="registro-panel">
+	<div class="container">
+		<div class="row">
+			<div class="panel-inicio col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 ">
+				<h1 class="black gris ">Entrar</h1>
+				<p>Inicie sesión o <a href="{{urlFor('shwCrearUsuario')}}">registrese</a> para poder participar</p>
+				<div class="well well-lg">
 				<form action="{{ urlFor('runLogin') }}" method="POST" class="form-horizontal">
 					<fieldset>
 						<div class="form-group">
@@ -24,47 +22,35 @@
 							</div>
 						</div>
 					</fieldset>
-				<div class="text-center">
-					<a href="#" class="btn btn-link">Volver</a>
-					<button type="submit" class="btn btn-primary">Entrar <i class="mdi mdi-login-variant"></i></button>
-				</div>
+					<button type="submit" class="btn btn-red btn-block">Entrar <i class="mdi mdi-login-variant"></i></button>
 				</form>
-				<div class="text-right">
-					<a href="{{urlFor('shwCrearUsuario')}}">Registrarse</a>
-					<br>
-					<a id="verRecuperar" href="javascript:void(0)">¿Olvido su usuario y contraseña?</a>
+			</div>
+				<a href="{{urlFor('shwIndex')}}" class="btn btn-default btn-sm btn-block">Volver</a>
+				<br>
+				<div class="btn-group btn-group-justified">
+					<a href="{{urlFor('shwCrearUsuario')}}" class="btn btn-link">Registrarse</a>
+					<a id="verRecuperar" href="javascript:void(0)" class="btn btn-link">¿Olvido su contraseña?</a>
 				</div>
 			</div>
-		</div>
-		<div class="panel-recuperar col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2" style="display:none;">
-			<h2><strong>Recuperar contraseña</strong></h2>
-			<p>Te enviaremos un link de recuperación por email.<br>Revisá tu casilla y seguí los pasos.</p>
-			<div class="well well-lg">
-				<form action="{{ urlFor('runRecuperarClave') }}" method="POST" class="form-horizontal">
-					<fieldset>
-						<div class="form-group">
-							<label for="inputEmail" class="col-md-2 control-label">Email</label>
-							<div class="col-md-10">
-								<input name="email" type="email" placeholder="Escriba aquí su email" id="inputEmail" class="form-control" required>
-							</div>
-						</div>
-					</fieldset>
-				<div class="text-center">
-					<button type="submit" class="btn btn-primary">Recuperar mi contraseña</button>
-					<br>
-					<a id="volverInicio" href="javascript:void(0)">Iniciar sesión</a>
-				</div>
+			<div class="panel-recuperar col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2" style="display:none;">
+				<h2 class="black gris">Recuperar contraseña</h2>
+				<p>Te enviaremos un link de recuperación por email.<br>Revisá tu casilla y seguí los pasos.</p>
+				<form action="{{ urlFor('runRecuperarClave') }}" method="POST">
+					<div class="form-group">
+						<label for="inputEmail" class="control-label">Email</label>
+						<input name="email" type="email" placeholder="Escriba aquí su email" id="inputEmail" class="form-control" required>
+					</div>
+					<div class="text-center">
+						<button type="submit" class="btn btn-red btn-block">Recuperar mi contraseña</button>
+						<br>
+						<a id="volverInicio" class="btn btn-default btn-sm btn-block" href="javascript:void(0)">Iniciar sesión</a>
+					</div>
 				</form>
-				<div class="text-right">
-				</div>
 			</div>
 		</div>
 	</div>
 </div>
-
-{% endblock %} 
-{# ----------------------------------------------------------- #} 
-{% block scripts %}
+{% endblock %} {# ----------------------------------------------------------- #} {% block scripts %}
 <script>
     $( document ).ready(function() {
         $( "#volverInicio" ).click(function() {
@@ -76,5 +62,4 @@
                 $( ".panel-recuperar" ).show("slide" );
         });
     });
-</script>
-{% endblock %}
+</script> {% endblock %}
