--- a/views/ref/registro/reiniciar-completo.twig
+++ b/views/ref/registro/reiniciar-completo.twig
@@ -1,20 +1,20 @@
-{% extends "lpe/master.twig" %} 
+{% set body_style = 'background-color: #ddf3ff;' %} 
+{% extends "ref/master2.twig" %} 
 {# ----------------------------------------------------------- #} 
 {% block titulo %}Contraseña reiniciada{% endblock %} 
 {% block body %}
-
+<div class="registro-panel">
 <div class="container">
 	<div class="row">
 		<div class="panel-inicio col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 ">
-			<h2><strong>SU CONTRASEÑA FUE REINICIADA</strong></h2>
+			<h2 class="black gris">Su contraseña fue reiniciada</h2>
 			<p>Puede volver a la plataforma iniciando sesión con su nueva contraseña.</p>
-			<a href="{{ urlFor('shwLogin') }}" class="btn btn-primary">Iniciar sesión</a>
+			<a href="{{ urlFor('shwLogin') }}" class="btn btn-red">Iniciar sesión</a>
 		</div>
 	</div>
 </div>
-
+</div>
 {% endblock %} 
 {# ----------------------------------------------------------- #} 
 {% block scripts %}
-
 {% endblock %}
