--- a/views/ref/registro/validar-correo.twig
+++ b/views/ref/registro/validar-correo.twig
@@ -1,27 +1,28 @@
-{% extends "lpe/master.twig" %} 
+{% set body_style = 'background-color: #ddf3ff;' %} 
+{% extends "ref/master2.twig" %} 
 {# ----------------------------------------------------------- #} 
 {% block titulo %}Validar email{% endblock %} 
 {% block body %}
-
+<div class="registro-panel">
 <div class="container">
 	<div class="row">
 		<div class="panel-inicio col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 ">
-			{% if usuarioValido == true %}
-					<h2><strong>SU EMAIL HA SIDO VERIFICADO</strong></h2>
+{% if usuarioValido == true %}
+<h2 class="black gris">Su email ha sido verificado</h2>
 			<p>Puede volver a la plataforma iniciando sesión con su nueva contraseña.</p>
-									<a href="{{ urlFor('shwLogin') }}" class="btn btn-primary">Iniciar sesión</a>
+									<a href="{{ urlFor('shwLogin') }}" class="btn btn-red">Iniciar sesión</a>
 					{% else %}
-		<h2><strong>LINK DE VERIFICACIÓN</strong></h2>
+					<h2 class="black gris">Link de verificación</h2>
 			<p>El link ingresado es incorrecto. Verifique que el link que hemos enviado a su dirección de correo electrónico sea el mismo que ingresó en la barra de direcciones.</p>
 			<p>Si sigue viendo este mensaje, comuníquese con un administrador.</p>
-						<a href="{{ urlFor('shwPortal') }}" class="btn btn-link">Volver</a>
+						<a href="{{ urlFor('shwPortal') }}" class="btn btn-default">Volver</a>
 						{% endif %}
 		</div>
 	</div>
 </div>
-
+</div>
 {% endblock %} 
 {# ----------------------------------------------------------- #} 
 {% block scripts %}
-
 {% endblock %}
+
