--- a/views/ref/contenido/derecho/crear.twig
+++ b/views/ref/contenido/derecho/crear.twig
@@ -1,120 +1,91 @@
-{% extends "lpe/master.twig" %} {% block linkhead %}
-<link rel="stylesheet" href="{{ baseUrl() }}/assets-lpe/css/sceditor/sceditor-main.css"> {% endblock %} {# ----------------------------------------------------------- #} {% block titulo %}Crear derecho{% endblock
-%} {% block body %}
-<form id="crearDerecho" action="{{ urlFor('runCrearDerecho') }}" method="POST" enctype="multipart/form-data">
-    <div class="titulo-derecho-background bgcolor{{random(3)}}">
-        <div class="overlay">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <textarea name="titulo" class="form-control" rows="1" placeholder="Escriba el título"></textarea>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div id="derecho" class="col-xs-12 col-sm-12 col-md-8 text-justify">
-                <div id="descripcion">
-                    <h3><strong>Descripción</strong></h3>
-                    <textarea name="descripcion">Escriba la descripción del derecho...</textarea>
-                </div>
-                <hr>
-                <div class="lista-acciones">
-                    <div class="accion-container">
-                        <textarea name="cuerpo" class="accion form-control" rows="1" placeholder="Describa la accion..."></textarea>
-                        <br>
-                    </div>
-                </div>
-                <a id="nuevaAccion" href="javascript:void(0)" class="btn btn-sm btn-info btn-block"><i class="mdi mdi-plus"></i> Agregar una acción</a>
-                                <br>
-                <div class="clearfix hidden-sm hidden-xs">
-                    <a href="#" class="btn btn-large btn-default ">Cancelar</a>
-                    <button type="submit" class="btn btn-lg btn-primary pull-right">Subir nuevo derecho</button>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-12 col-md-4">
-                <div id="youtubeVideo" class="embed-responsive embed-responsive-16by9" style="margin-bottom: 20px;">
-                    <iframe class="embed-responsive-item" id="youtubeVideo" src="https://www.youtube.com/embed/7uulVAHwXi0" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <div class="form-group">
-                    <label class="control-label">Imagen de Cabecera</label><br>
-                    <div class="input-group">
-                        <label class="input-group-btn">
-                    <span class="btn btn-primary">
-                        Explorar <input name="archivo" type="file" style="display: none;">
-                    </span>
-                </label>
-                        <input type="text" class="form-control" readonly style="padding-left:10px">
-                    </div>
-                    <span class="help-block">
-                La imagen se subirá cuando se suba el derecho.
-            </span>
-                </div>
-                <div class="form-group">
-                    <label class="control-label">Video de Youtube</label>
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="zmdi zmdi-youtube-play zmdi-hc-lg"></i></span>
-                        <input name="video" class="form-control" type="text" value="7uulVAHwXi0">
-                    </div>
-                </div>
-                <div class="alert alert-dismissible alert-info">
-                    Debe colocar el codigo que aparece en la URL del video, luego de la porcion "?v=". Por ejemplo, de <i>https://www.youtube.com/watch?v=7uulVAHwXi0</i>
-                    la porcion seria <code>7uulVAHwXi0</code><br>De ser correcto, el video tendria que mostrarse.
-                </div>
-                <h6 class="text-info"><b>Nota:</b> Las opiniones se podran cargar LUEGO que el derecho haya sido creado</h6>
-            </div>
-            <input type="text" name="secciones" value="" hidden>
-            <input type="text" name="categoria" value="1" hidden>
-            <input type="text" name="tags" value="" hidden>
-             <div class="clearfix hidden-md hidden-lg">
-                    <a href="#" class="btn btn-large btn-default ">Cancelar</a>
-                    <button type="submit" class="btn btn-lg btn-primary pull-right">Subir nuevo derecho</button>
-                </div>
-        </div>
-    </div>
-</form>
-
-{% endblock %} {# ----------------------------------------------------------- #} {% block scripts %}
-<script src="{{ baseUrl() }}/assets-lpe/js/autosize.min.js"></script>
-<script src="{{ baseUrl() }}/assets-lpe/js/sceditor/jquery.sceditor.js"></script>
+{% extends "ref/side-master.twig" %} {# ----------------------------------------------------------- #} {% block linkhead
+%}
+<link rel="stylesheet" href="{{ baseUrl() }}/assets-ref/css/sceditor/sceditor-main.css"> {% endblock %} {% block titulo %}Nuevo Eje{% endblock %} {% block body %}
+<div id="wrapper">
+	{% include "ref/menu-side.twig"%}
+	<!-- Page Content -->
+	<div id="page-content-wrapper">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-lg-8">
+					<form id="crearDerecho" action="{{ urlFor('runCrearDerecho') }}" method="POST" enctype="multipart/form-data">
+						<h1>Nuevo Eje</h1>
+						<hr>
+						<div class="form-group">
+							<label class="control-label" for="titulo">Titulo del Eje</label>
+							<input class="form-control input-lg" id="titulo" name="titulo" type="text">
+						</div>
+						<div class="form-group">
+							<label class="control-label" for="orden">Orden del Eje</label>
+							<span class="help-block">De ser 8 ejes en total, defina en que orden se ubica el eje. (Por ejemplo, si es el segundo eje, seria "2")</span>
+							<input class="form-control" id="orden" name="orden" value="3" type="text">
+						</div>
+						<div class="form-group">
+							<label class="control-label" for="descripcionHome">Descripcion en Home</label>
+							<span class="help-block">Sin formato. Esta descripción aparece en la página donde se listan los ejes.</span>
+							<textarea class="form-control" rows="3" id="descripcionHome" name="descripcionHome"></textarea>
+						</div>
+						<hr>
+						<div class="form-group">
+							<label class="control-label" for="inputLarge">Descripcion</label>
+							<span class="help-block">Esta es la descripcion del EJE.</span>
+							<textarea name="descripcion"></textarea>
+						</div>
+						<hr>
+						<h3>Sub-Ejes</h3>
+						<p class="text-muted">Aqui se listan los sub-ejes del eje general. En lo posible, intentar que sean los mas definitivos posibles.</p>
+						<ul class="list-group lista-acciones">
+							<li class="list-group-item accion-container">
+								<textarea name="cuerpo" class="accion form-control" rows="2" placeholder="Describa el eje"></textarea>
+							</li>
+						</ul>
+						<a id="nuevaAccion" href="javascript:void(0)" class="btn btn-sm btn-info btn-block"><i class="mdi mdi-plus"></i> Agregar una acción</a>
+						<hr>
+						<div class="form-group clearfix">
+							<a href="#" class="btn btn-large btn-default ">Cancelar</a>
+							<button type="submit" class="btn btn-lg btn-primary pull-right">Guardar</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- /#page-content-wrapper -->
+</div>
+<!-- /#wrapper -->
+{% endblock body %} {# -------------------------------------------- #} {% block scripts %}
+<script src="{{ baseUrl() }}/assets-ref/js/autosize.min.js"></script>
+<script src="{{ baseUrl() }}/assets-ref/js/sceditor/jquery.sceditor.js"></script>
 <script id="accionTemplate" type="text/template">
-    <div class="accion-container">
-        <a id="eliminar-numAccion" href="javascript:void(0)" data-idaccion='numAccion' class="eliminarAccion pull-right" style="font-size:20px;"><i class="mdi mdi-close"></i></a>
-        <textarea name="cuerpo" class="accion form-control" rows="1" placeholder="Describa la accion..."></textarea>
-        <br>
-    </div>
+    <li class="list-group-item accion-container">
+        <a id="eliminar-numAccion" href="javascript:void(0)" data-idaccion='numAccion' class="eliminarAccion pull-right" style="font-size:13px;"><i class="fa fa-close"></i></a>
+        <textarea name="cuerpo" class="accion form-control" rows="2" placeholder="Describa el EJE..."></textarea>
+    </li>
 </script>
 <script>
-    var numeroAccion = 2;
-    $(document).ready(function() {
-    //Events
-    // $("a.eliminarArticulo").on("click", eliminarArticulo);
+	var numeroAccion = 2;
+	 $(document).ready(function() {
+
     autosize($('textarea'));
-    // iniciarEditor('cuerpo-1');
-    iniciarEditor('descripcion');
+	iniciarEditor('descripcion');
+	 });
+	 
+	  var iniciarEditor = function(nombre) {
+        $("textarea[name='" + nombre + "']").sceditor({
+            plugins: "bbcode",
+            emoticonsEnabled: false,
+            toolbarExclude: "font,color,table,horizontalrule,subscript,superscript",
+            height: '150',
+            width: '100%',
+            style: "{{ baseUrl() }}/assets-ref/css/virtuagora-ref-side.css",
+            resizeEnabled: false,
+            resizeHeight: true,
+            autoExpand: true,
+            enablePasteFiltering: true
+        });
+    }
 
-    $(':file').on('fileselect', function(event, numFiles, label) {
-        var input = $(this).parents('.input-group').find(':text'),
-            log = numFiles > 1 ? numFiles + ' files selected' : label;
-        if(numFiles > 1 || numFiles == 0){
-            alert('Por favor, seleccione solo 1 archivo');
-        } else if(numFiles == 1){
-            input.val(log);
-        }
-    });
-
-
-    });
-    $('input[name=video]').change(function() {
-        $("#youtubeVideo iframe").remove();
-        $('<iframe class="embed-responsive-item" id="youtubeVideo" frameborder="0" allowfullscreen></iframe>')
-            .attr("src", "https://www.youtube.com/embed/" + $(this).val())
-            .appendTo("#youtubeVideo");
-    });
-
-    $("#nuevaAccion").click(function(e) {
+	  $("#nuevaAccion").click(function(e) {
         var nuevaAccion = $("#accionTemplate").html().replace(new RegExp('numAccion', 'g'), numeroAccion);
         $(".lista-acciones").append(nuevaAccion)
         numeroAccion += 1
@@ -133,33 +104,19 @@
         $(this).closest(".li-accion").remove();
     }
 
-    $(document).on('change', ':file', function() {
-        var input = $(this),
-            numFiles = input.get(0).files ? input.get(0).files.length : 1,
-            label = input.val().replace(/\\/g, '/').replace(/.*\//, '');
-        input.trigger('fileselect', [numFiles, label]);
-    });
-    var iniciarEditor = function(nombre) {
-        $("textarea[name='" + nombre + "']").sceditor({
-            plugins: "bbcode",
-            emoticonsEnabled: false,
-            toolbarExclude: "font,color,table,horizontalrule,subscript,superscript",
-            height: '100',
-            width: '100%',
-            style: "{{ baseUrl() }}/assets-lpe/css/lpe.css",
-            resizeEnabled: false,
-            resizeHeight: true,
-            autoExpand: true,
-            enablePasteFiltering: true
-        });
-    }
-    $( "form" ).submit(function( event ) {
+	 $( "form" ).submit(function( event ) {
+		event.preventDefault();	
         var secciones = [];        
         $( "textarea[name=cuerpo]" ).each(function( index ) {
         secciones.push($( this ).val());
         });
         var seccionesString = secciones.join("&&")
         $('input[name=secciones]').val(seccionesString);
+		console.log($("form").	serialize())
         return true;
 });
-</script> {% endblock %}
+
+$("form :input").change(function(){
+   console.log($("form").serialize());
+});
+	</script> {% endblock scripts %}
