--- a/views/ref/registro/recuperar-clave.twig
+++ b/views/ref/registro/recuperar-clave.twig
@@ -1,22 +1,16 @@
-{% extends "lpe/master.twig" %} 
-{# ----------------------------------------------------------- #} 
-{% block titulo %}Recuperar contraseña{% endblock %} 
-{% block body %}
-
-<div class="container">
-	<div class="row">
-		<div class="panel-inicio col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 ">
-			<h2><strong>REVISE SU EMAIL</strong></h2>
-			<p>Le hemos enviado a su email un link para que reinicie su contraseña.
-						Recuerde que este link expira en una hora. En caso de no utilizarlo,
-						siempre podrá generar otra desde la opción de recuperar contraseña.</p>
-						<a href="{{ urlFor('shwPortal') }}" class="btn btn-link">Volver</a>
+{% set body_style = 'background-color: #ddf3ff;' %} 
+{% extends "ref/master2.twig" %} {# -----------------------------------------------------------
+#} {% block titulo %}Recuperar contraseña{% endblock %} {% block body %}
+<div class="registro-panel">
+	<div class="container">
+		<div class="row">
+			<div class="panel-inicio col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 ">
+				<h2 class="black gris">Revise su email</h2>
+				<p>Le hemos enviado a su email un link para que reinicie su contraseña. Recuerde que este link expira en una hora. En caso
+					de no utilizarlo, siempre podrá generar otra desde la opción de recuperar contraseña.</p>
+				<a href="{{ urlFor('shwPortal') }}" class="btn btn-default">Volver</a>
+			</div>
 		</div>
 	</div>
 </div>
-
-{% endblock %} 
-{# ----------------------------------------------------------- #} 
-{% block scripts %}
-
-{% endblock %}
+{% endblock %} {# ----------------------------------------------------------- #} {% block scripts %} {% endblock %}
