--- a/views/ref/test.twig
+++ b/views/ref/test.twig
@@ -1,23 +1,38 @@
-{% extends "lpe/master.twig" %} {# ----------------------------------------------------------- #} {% block titulo %}Inicio{% endblock %} {% block body %}
-<div class="container" style=" ">
-    <div class="row">
-        <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2">
-            <h1><strong>
-             SANTA FE CONSTRUYE EDUCACIÓN Y FUTURO
-                </strong></h1>
-             <p class="lead">
-
-Desde el Gobierno de Santa Fe se asume a la Educación como promotora de igualdad, emancipación y libertad ciudadana, para posibilitar la construcción colectiva de las condiciones sociales y culturales generadoras de la convivencia y la vida en democracia; priorizando la igualdad de derechos estudiantiles para el acceso, permanencia, aprendizaje y egreso del sistema educativo.
-             </p>
-             <p class="lead">
-
-<em>“Santa Fe construye Educación y Futuro. Diálogos para la Ley Provincial de Educación”</em> recoge los sentidos del encuentro, el diálogo, la participación y el compromiso por parte de la ciudadanía, como forma de construcción y transformación de la educación para incidir en el presente y el futuro. La propuesta plantea un debate amplio, profundo y diverso sobre la educación que la sociedad santafesina necesita.  
-             </p>
-        </div>
-    </div>
+{% set body_style = 'background-color: #ddf3ff;' %} {% extends "ref/master2.twig" %} {# -----------------------------------------------------------
+#} {% block titulo %}Reiniciar contraseña{% endblock %} {% block body %}
+<div class="registro-panel">
+	<div class="container">
+		<div class="row">
+			<div class="panel-inicio col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 ">
+				<h2 class="black gris">Reiniciar contraseña</h2>
+				<div class="well well-lg">
+					<form action="{{ urlFor('runReiniciarClave',{'idUsu': idUsu,'token': token}) }}" method="POST" class="form-horizontal" data-toggle="validator">
+						<fieldset>
+							<div class="form-group">
+								<label for="inputPassword" class="col-md-2 control-label">Contraseña</label>
+								<div class="col-md-10">
+									<input name="password" type="password" placeholder="Escriba aquí su contraseña" id="inputPassword" class="form-control" data-error="Complete el campo con una contraseña"
+													required>
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-md-2 control-label"></label>
+								<div class="col-md-10">
+									<input name="password2" type="password" placeholder="Reingrese su contraseña" class="form-control" data-match="#inputPassword"
+													data-error="Reingrese la contraseña que ha ingresado en el campo anterior" data-match-error="Las contraseñas no son iguales. Revisé"
+													required>
+									<div class="help-block with-errors"></div>
+								</div>
+							</div>
+						</fieldset>
+						<div class="text-center">
+							<button type="submit" class="btn btn-red btn-block">Reiniciar contraseña<i class="zmdi zmdi-shield-check zmdi-hc-lg zmdi-hc-fw"></i></button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
-{% include 'lpe/contenido/opinion/ver.twig' %}
-
-{% endblock body %} {# -------------------------------------------- #} {% block scripts %}
-<script>
-</script> {% endblock scripts %}
+{% endblock %} {# ----------------------------------------------------------- #} {% block scripts %}
+<script src="{{ baseUrl() }}/assets-lpe/js/validator.min.js"></script> {% endblock %}
